Fix: Restaurant Service implementation